--- a/src/main/resources/view/fee-management.fxml
+++ b/src/main/resources/view/fee-management.fxml
@@ -17,7 +17,7 @@
 <VBox alignment="CENTER" spacing="10" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FeeViewController">
     <!-- Hàng 1: Nút Thêm Mới -->
     <HBox alignment="CENTER_LEFT" spacing="10">
-        <Button fx:id="insertButton" text="Thêm mới" onAction="#handleInsert" />
+        <Button fx:id="addButton" text="Thêm mới" onAction="#handleAdd" />
     </HBox>
 
     <!-- Hàng 2: Form lọc dữ liệu -->
@@ -28,10 +28,11 @@
         <Label text="Nhóm khoản thu:" />
         <ComboBox fx:id="subCategoryComboBox" />
 
-<!--        <Label text="Trạng thái:" />-->
-<!--        <ComboBox fx:id="filterStatusComboBox" />-->
+        <!--        <Label text="Trạng thái:" />-->
+        <!--        <ComboBox fx:id="filterStatusComboBox" />-->
 
         <Button fx:id="searchButton" text="Tìm kiếm" onAction="#handleSearch" />
+        <Button fx:id="resetButton" text="Xem tất cả" onAction="#handleReset" />
     </HBox>
     <!-- TableView hiển thị danh sách Fee -->
     <TableView fx:id="feeTable">
@@ -49,56 +50,56 @@
         </columns>
     </TableView>
 
-<!--     Form nhập liệu-->
-    <GridPane hgap="10" vgap="10">
-        <children>
-<!--            <Label text="Loại khoản thu :" GridPane.columnIndex="0" GridPane.rowIndex="0" />-->
-<!--            <ComboBox fx:id="categoryComboBox" editable="true" GridPane.columnIndex="1" GridPane.rowIndex="0" />-->
+    <!--     Form nhập liệu-->
+    <!--    <GridPane hgap="10" vgap="10">-->
+    <!--        <children>-->
+    <!--&lt;!&ndash;            <Label text="Loại khoản thu :" GridPane.columnIndex="0" GridPane.rowIndex="0" />&ndash;&gt;-->
+    <!--&lt;!&ndash;            <ComboBox fx:id="categoryComboBox" editable="true" GridPane.columnIndex="1" GridPane.rowIndex="0" />&ndash;&gt;-->
 
-<!--            <Label text="Nhóm khoản thu:" GridPane.columnIndex="0" GridPane.rowIndex="1" />-->
-<!--            <ComboBox fx:id="subCategoryComboBox" GridPane.columnIndex="1" GridPane.rowIndex="1" />-->
+    <!--&lt;!&ndash;            <Label text="Nhóm khoản thu:" GridPane.columnIndex="0" GridPane.rowIndex="1" />&ndash;&gt;-->
+    <!--&lt;!&ndash;            <ComboBox fx:id="subCategoryComboBox" GridPane.columnIndex="1" GridPane.rowIndex="1" />&ndash;&gt;-->
 
-            <Label text="Số tiền:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-            <TextField fx:id="amountField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+    <!--            <Label text="Số tiền:" GridPane.columnIndex="0" GridPane.rowIndex="2" />-->
+    <!--            <TextField fx:id="amountField" GridPane.columnIndex="1" GridPane.rowIndex="2" />-->
 
-            <Label text="Đơn vị tính:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-            <ComboBox fx:id="unitComboBox" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+    <!--            <Label text="Đơn vị tính:" GridPane.columnIndex="0" GridPane.rowIndex="3" />-->
+    <!--            <ComboBox fx:id="unitComboBox" GridPane.columnIndex="1" GridPane.rowIndex="3" />-->
 
-            <Label text="Kỳ thanh toán:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-            <ComboBox fx:id="billPeriodComboBox" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+    <!--            <Label text="Kỳ thanh toán:" GridPane.columnIndex="0" GridPane.rowIndex="4" />-->
+    <!--            <ComboBox fx:id="billPeriodComboBox" GridPane.columnIndex="1" GridPane.rowIndex="4" />-->
 
-            <Label text="Mô tả:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-            <TextArea fx:id="descriptionArea" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+    <!--            <Label text="Mô tả:" GridPane.columnIndex="0" GridPane.rowIndex="5" />-->
+    <!--            <TextArea fx:id="descriptionArea" GridPane.columnIndex="1" GridPane.rowIndex="5" />-->
 
-            <Label text="Ngày bắt đầu:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-            <DatePicker fx:id="startDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+    <!--            <Label text="Ngày bắt đầu:" GridPane.columnIndex="0" GridPane.rowIndex="6" />-->
+    <!--            <DatePicker fx:id="startDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="6" />-->
 
-            <Label text="Ngày kết thúc:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
-            <DatePicker fx:id="endDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-        </children>
-      <columnConstraints>
-         <ColumnConstraints />
-         <ColumnConstraints />
-      </columnConstraints>
-      <rowConstraints>
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-      </rowConstraints>
-    </GridPane>
+    <!--            <Label text="Ngày kết thúc:" GridPane.columnIndex="0" GridPane.rowIndex="7" />-->
+    <!--            <DatePicker fx:id="endDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="7" />-->
+    <!--        </children>-->
+    <!--      <columnConstraints>-->
+    <!--         <ColumnConstraints />-->
+    <!--         <ColumnConstraints />-->
+    <!--      </columnConstraints>-->
+    <!--      <rowConstraints>-->
+    <!--         <RowConstraints />-->
+    <!--         <RowConstraints />-->
+    <!--         <RowConstraints />-->
+    <!--         <RowConstraints />-->
+    <!--         <RowConstraints />-->
+    <!--         <RowConstraints />-->
+    <!--         <RowConstraints />-->
+    <!--         <RowConstraints />-->
+    <!--      </rowConstraints>-->
+    <!--    </GridPane>-->
 
 
     <!-- Các nút điều khiển -->
-    <HBox alignment="CENTER" spacing="10">
-        <Button fx:id="addButton" onAction="#handleAdd" text="Thêm" />
-        <Button fx:id="updateButton" onAction="#handleEdit" text="Sửa" />
-        <Button fx:id="deleteButton" onAction="#handleDelete" text="Xóa" />
-    </HBox>
+    <!--    <HBox alignment="CENTER" spacing="10">-->
+    <!--        <Button fx:id="addButton" onAction="#handleAdd" text="Thêm" />-->
+    <!--        <Button fx:id="updateButton" onAction="#handleEdit" text="Sửa" />-->
+    <!--        <Button fx:id="deleteButton" onAction="#handleDelete" text="Xóa" />-->
+    <!--    </HBox>-->
 
     <!-- Label hiển thị trạng thái -->
     <Label fx:id="statusLabel" text="Trạng thái" />
