--- a/src/main/resources/view/bill/bill-management.fxml
+++ b/src/main/resources/view/bill/bill-management.fxml
@@ -8,17 +8,30 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ComboBox?>
 <AnchorPane prefHeight="475.0" prefWidth="867.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.InvoiceViewController">
 
-    <VBox alignment="TOP_CENTER" layoutX="130.0" layoutY="19.0" prefHeight="378.0" prefWidth="657.0" spacing="10" stylesheets="@../css/table_fee.css">
+    <VBox alignment="TOP_CENTER" layoutX="130.0" layoutY="19.0" prefHeight="378.0" prefWidth="657.0" spacing="10" >
         <!-- Tiêu đề -->
         <Label style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Danh sách hóa đơn cần thanh toán" />
+
+        <Button fx:id="markAsPaidButton" onAction="#markAsPaid" text="Đã thanh toán" />
+
+        <HBox alignment="CENTER" spacing="10">
+            <TextField fx:id="apartmentField" promptText="Số phòng"/>
+            <ComboBox fx:id="categoryComboBox" promptText="Loại khoản thu"/>
+            <ComboBox fx:id="invoiceStatusComboBox" promptText="Trạng thái"/>
+            <Button fx:id="searchButton" onAction="#handleSearch" text="Tìm kiếm" />
+        </HBox>
 
         <!-- Bảng hiển thị hóa đơn -->
         <TableView fx:id="invoiceTable" prefHeight="300" prefWidth="657.0">
             <columns>
+                <TableColumn fx:id="selectedColumn" prefWidth="50" text="" />
                 <TableColumn fx:id="invoiceIdColumn" prefWidth="100" text="Mã Hóa Đơn" />
-
+                <TableColumn fx:id="payerNameColumn" prefWidth="100" text="Tên chủ hộ" />
+                <TableColumn fx:id="apartmentColumn" prefWidth="50" text="Tên căn hộ" />
                 <TableColumn fx:id="issueDateColumn" prefWidth="120" text="Ngày lập" />
                 <TableColumn fx:id="dueDateColumn" prefWidth="120" text="Hạn thanh toán" />
                 <TableColumn fx:id="categoryColumn" prefWidth="120" text="Loại khoản thu" />
