--- a/src/main/resources/view/apartment/apartment_table.fxml
+++ b/src/main/resources/view/apartment/apartment_table.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="456.0" prefWidth="874.0" stylesheets="@../css/table_fee.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.apartment.ApartmentViewController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="496.0" prefWidth="874.0" stylesheets="@../css/table_fee.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.apartment.ApartmentViewController">
    <children>
       <HBox prefHeight="38.0" prefWidth="820.0" />
       <HBox alignment="CENTER" prefHeight="42.0" prefWidth="820.0" stylesheets="@../css/table_fee.css">
@@ -38,5 +38,10 @@
          </children>
       </Pane>
       <Label fx:id="thongBaoLabel" text="Trạng thái" />
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Button fx:id="PDFButton" mnemonicParsing="false" onAction="#handleExportPdfClick" text="PDF" />
+         </children>
+      </HBox>
    </children>
 </VBox>
