--- a/src/main/resources/view/resident/resident_table.fxml
+++ b/src/main/resources/view/resident/resident_table.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="924.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.resident.ResidentViewController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="579.0" prefWidth="924.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.resident.ResidentViewController">
     <children>
         <HBox prefHeight="40.0" prefWidth="792.0" />
         <HBox alignment="CENTER" prefHeight="37.0" prefWidth="792.0" stylesheets="@../css/table_fee.css">
@@ -41,5 +41,10 @@
             </children>
         </Pane>
         <Label fx:id="thongBaoLabel" text="Trạng thái" textAlignment="CENTER" />
+      <HBox alignment="CENTER" prefHeight="54.0" prefWidth="924.0">
+         <children>
+            <Button fx:id="PDFButton" mnemonicParsing="false" onAction="#handleExportResidentPdfClick" text="PDF" />
+         </children>
+      </HBox>
     </children>
 </VBox>
