--- a/src/main/resources/view/fee/fee_table.fxml
+++ b/src/main/resources/view/fee/fee_table.fxml
@@ -25,8 +25,8 @@
         <Label text="Nhóm khoản thu:" />
         <ComboBox fx:id="subCategoryComboBox" />
 
-        <!--        <Label text="Trạng thái:" />-->
-        <!--        <ComboBox fx:id="filterStatusComboBox" />-->
+        <Label text="Trạng thái:" />
+        <ComboBox fx:id="filterStatusComboBox" />
 
         <Button fx:id="searchButton" onAction="#handleSearch">
          <graphic>
